Added a HomeHandler to handle the dynamic logic.  We can now have 50% chance of winning.